aadl2hcsp/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> statement ; statement
Rule 2     statement -> NAME ATTACHED expression
Rule 3     statement -> expression
Rule 4     expression -> expression PLUS expression
Rule 5     expression -> expression MINUS expression
Rule 6     expression -> expression TIMES expression
Rule 7     expression -> expression DIVIDE expression
Rule 8     expression -> expression REMAINDER expression
Rule 9     expression -> expression EQUALS expression
Rule 10    expression -> expression LEFT_ANGLE_BRA expression
Rule 11    expression -> expression RIGHT_ANGLE_BRA expression
Rule 12    expression -> expression COMP_OP expression
Rule 13    statement -> expression !
Rule 14    expression -> ( expression )
Rule 15    expression -> NUMBER
Rule 16    expression -> NAME
Rule 17    expression -> expression , expression
Rule 18    type -> INT
Rule 19    type -> FLOAT
Rule 20    type -> BOOLEAN
Rule 21    statement -> VARIABLES expression : type
Rule 22    statement -> VARIABLES expression
Rule 23    state -> state state
Rule 24    state -> INITIAL
Rule 25    state -> COMPLETE
Rule 26    state -> FINAL
Rule 27    statement -> STATES NAME : state STATE
Rule 28    statement -> TRANSITIONS NAME : NAME LEFT_DIS ON DISPATCH RIGHT_DIS NAME LEFT_CURLY_BRA statement RIGHT_CURLY_BRA
Rule 29    statement -> IF ( expression ) statement END IF
Rule 30    statement -> WHILE ( expression ) statement END WHILE

Terminals, with rules where they appear

!                    : 13
(                    : 14 29 30
)                    : 14 29 30
,                    : 17
:                    : 21 27 28
;                    : 1
ATTACHED             : 2
BOOLEAN              : 20
COMPLETE             : 25
COMP_OP              : 12
DISPATCH             : 28
DIVIDE               : 7
END                  : 29 30
EQUALS               : 9
FINAL                : 26
FLOAT                : 19
IF                   : 29 29
INITIAL              : 24
INT                  : 18
LEFT_ANGLE_BRA       : 10
LEFT_CURLY_BRA       : 28
LEFT_DIS             : 28
MINUS                : 5
NAME                 : 2 16 27 28 28 28
NUMBER               : 15
ON                   : 28
PLUS                 : 4
REMAINDER            : 8
RIGHT_ANGLE_BRA      : 11
RIGHT_CURLY_BRA      : 28
RIGHT_DIS            : 28
STATE                : 27
STATES               : 27
TIMES                : 6
TRANSITIONS          : 28
VARIABLES            : 21 22
WHILE                : 30 30
error                : 

Nonterminals, with rules where they appear

expression           : 2 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 14 17 17 21 22 29 30
state                : 23 23 27
statement            : 1 1 28 29 30 0
type                 : 21

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . statement ; statement
    (2) statement -> . NAME ATTACHED expression
    (3) statement -> . expression
    (13) statement -> . expression !
    (21) statement -> . VARIABLES expression : type
    (22) statement -> . VARIABLES expression
    (27) statement -> . STATES NAME : state STATE
    (28) statement -> . TRANSITIONS NAME : NAME LEFT_DIS ON DISPATCH RIGHT_DIS NAME LEFT_CURLY_BRA statement RIGHT_CURLY_BRA
    (29) statement -> . IF ( expression ) statement END IF
    (30) statement -> . WHILE ( expression ) statement END WHILE
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression REMAINDER expression
    (9) expression -> . expression EQUALS expression
    (10) expression -> . expression LEFT_ANGLE_BRA expression
    (11) expression -> . expression RIGHT_ANGLE_BRA expression
    (12) expression -> . expression COMP_OP expression
    (14) expression -> . ( expression )
    (15) expression -> . NUMBER
    (16) expression -> . NAME
    (17) expression -> . expression , expression

    NAME            shift and go to state 2
    VARIABLES       shift and go to state 4
    STATES          shift and go to state 5
    TRANSITIONS     shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 9
    (               shift and go to state 8
    NUMBER          shift and go to state 10

    statement                      shift and go to state 1
    expression                     shift and go to state 3

state 1

    (0) S' -> statement .
    (1) statement -> statement . ; statement

    ;               shift and go to state 11


state 2

    (2) statement -> NAME . ATTACHED expression
    (16) expression -> NAME .

    ATTACHED        shift and go to state 12
    !               reduce using rule 16 (expression -> NAME .)
    PLUS            reduce using rule 16 (expression -> NAME .)
    MINUS           reduce using rule 16 (expression -> NAME .)
    TIMES           reduce using rule 16 (expression -> NAME .)
    DIVIDE          reduce using rule 16 (expression -> NAME .)
    REMAINDER       reduce using rule 16 (expression -> NAME .)
    EQUALS          reduce using rule 16 (expression -> NAME .)
    LEFT_ANGLE_BRA  reduce using rule 16 (expression -> NAME .)
    RIGHT_ANGLE_BRA reduce using rule 16 (expression -> NAME .)
    COMP_OP         reduce using rule 16 (expression -> NAME .)
    ,               reduce using rule 16 (expression -> NAME .)
    ;               reduce using rule 16 (expression -> NAME .)
    $end            reduce using rule 16 (expression -> NAME .)
    END             reduce using rule 16 (expression -> NAME .)
    RIGHT_CURLY_BRA reduce using rule 16 (expression -> NAME .)


state 3

    (3) statement -> expression .
    (13) statement -> expression . !
    (4) expression -> expression . PLUS expression
    (5) expression -> expression . MINUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . DIVIDE expression
    (8) expression -> expression . REMAINDER expression
    (9) expression -> expression . EQUALS expression
    (10) expression -> expression . LEFT_ANGLE_BRA expression
    (11) expression -> expression . RIGHT_ANGLE_BRA expression
    (12) expression -> expression . COMP_OP expression
    (17) expression -> expression . , expression

    ;               reduce using rule 3 (statement -> expression .)
    $end            reduce using rule 3 (statement -> expression .)
    END             reduce using rule 3 (statement -> expression .)
    RIGHT_CURLY_BRA reduce using rule 3 (statement -> expression .)
    !               shift and go to state 13
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    REMAINDER       shift and go to state 18
    EQUALS          shift and go to state 19
    LEFT_ANGLE_BRA  shift and go to state 20
    RIGHT_ANGLE_BRA shift and go to state 21
    COMP_OP         shift and go to state 22
    ,               shift and go to state 23


state 4

    (21) statement -> VARIABLES . expression : type
    (22) statement -> VARIABLES . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression REMAINDER expression
    (9) expression -> . expression EQUALS expression
    (10) expression -> . expression LEFT_ANGLE_BRA expression
    (11) expression -> . expression RIGHT_ANGLE_BRA expression
    (12) expression -> . expression COMP_OP expression
    (14) expression -> . ( expression )
    (15) expression -> . NUMBER
    (16) expression -> . NAME
    (17) expression -> . expression , expression

    (               shift and go to state 8
    NUMBER          shift and go to state 10
    NAME            shift and go to state 25

    expression                     shift and go to state 24

state 5

    (27) statement -> STATES . NAME : state STATE

    NAME            shift and go to state 26


state 6

    (28) statement -> TRANSITIONS . NAME : NAME LEFT_DIS ON DISPATCH RIGHT_DIS NAME LEFT_CURLY_BRA statement RIGHT_CURLY_BRA

    NAME            shift and go to state 27


state 7

    (29) statement -> IF . ( expression ) statement END IF

    (               shift and go to state 28


state 8

    (14) expression -> ( . expression )
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression REMAINDER expression
    (9) expression -> . expression EQUALS expression
    (10) expression -> . expression LEFT_ANGLE_BRA expression
    (11) expression -> . expression RIGHT_ANGLE_BRA expression
    (12) expression -> . expression COMP_OP expression
    (14) expression -> . ( expression )
    (15) expression -> . NUMBER
    (16) expression -> . NAME
    (17) expression -> . expression , expression

    (               shift and go to state 8
    NUMBER          shift and go to state 10
    NAME            shift and go to state 25

    expression                     shift and go to state 29

state 9

    (30) statement -> WHILE . ( expression ) statement END WHILE

    (               shift and go to state 30


state 10

    (15) expression -> NUMBER .

    !               reduce using rule 15 (expression -> NUMBER .)
    PLUS            reduce using rule 15 (expression -> NUMBER .)
    MINUS           reduce using rule 15 (expression -> NUMBER .)
    TIMES           reduce using rule 15 (expression -> NUMBER .)
    DIVIDE          reduce using rule 15 (expression -> NUMBER .)
    REMAINDER       reduce using rule 15 (expression -> NUMBER .)
    EQUALS          reduce using rule 15 (expression -> NUMBER .)
    LEFT_ANGLE_BRA  reduce using rule 15 (expression -> NUMBER .)
    RIGHT_ANGLE_BRA reduce using rule 15 (expression -> NUMBER .)
    COMP_OP         reduce using rule 15 (expression -> NUMBER .)
    ,               reduce using rule 15 (expression -> NUMBER .)
    ;               reduce using rule 15 (expression -> NUMBER .)
    $end            reduce using rule 15 (expression -> NUMBER .)
    :               reduce using rule 15 (expression -> NUMBER .)
    END             reduce using rule 15 (expression -> NUMBER .)
    RIGHT_CURLY_BRA reduce using rule 15 (expression -> NUMBER .)
    )               reduce using rule 15 (expression -> NUMBER .)


state 11

    (1) statement -> statement ; . statement
    (1) statement -> . statement ; statement
    (2) statement -> . NAME ATTACHED expression
    (3) statement -> . expression
    (13) statement -> . expression !
    (21) statement -> . VARIABLES expression : type
    (22) statement -> . VARIABLES expression
    (27) statement -> . STATES NAME : state STATE
    (28) statement -> . TRANSITIONS NAME : NAME LEFT_DIS ON DISPATCH RIGHT_DIS NAME LEFT_CURLY_BRA statement RIGHT_CURLY_BRA
    (29) statement -> . IF ( expression ) statement END IF
    (30) statement -> . WHILE ( expression ) statement END WHILE
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression REMAINDER expression
    (9) expression -> . expression EQUALS expression
    (10) expression -> . expression LEFT_ANGLE_BRA expression
    (11) expression -> . expression RIGHT_ANGLE_BRA expression
    (12) expression -> . expression COMP_OP expression
    (14) expression -> . ( expression )
    (15) expression -> . NUMBER
    (16) expression -> . NAME
    (17) expression -> . expression , expression

    NAME            shift and go to state 2
    VARIABLES       shift and go to state 4
    STATES          shift and go to state 5
    TRANSITIONS     shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 9
    (               shift and go to state 8
    NUMBER          shift and go to state 10

    statement                      shift and go to state 31
    expression                     shift and go to state 3

state 12

    (2) statement -> NAME ATTACHED . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression REMAINDER expression
    (9) expression -> . expression EQUALS expression
    (10) expression -> . expression LEFT_ANGLE_BRA expression
    (11) expression -> . expression RIGHT_ANGLE_BRA expression
    (12) expression -> . expression COMP_OP expression
    (14) expression -> . ( expression )
    (15) expression -> . NUMBER
    (16) expression -> . NAME
    (17) expression -> . expression , expression

    (               shift and go to state 8
    NUMBER          shift and go to state 10
    NAME            shift and go to state 25

    expression                     shift and go to state 32

state 13

    (13) statement -> expression ! .

    ;               reduce using rule 13 (statement -> expression ! .)
    $end            reduce using rule 13 (statement -> expression ! .)
    END             reduce using rule 13 (statement -> expression ! .)
    RIGHT_CURLY_BRA reduce using rule 13 (statement -> expression ! .)


state 14

    (4) expression -> expression PLUS . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression REMAINDER expression
    (9) expression -> . expression EQUALS expression
    (10) expression -> . expression LEFT_ANGLE_BRA expression
    (11) expression -> . expression RIGHT_ANGLE_BRA expression
    (12) expression -> . expression COMP_OP expression
    (14) expression -> . ( expression )
    (15) expression -> . NUMBER
    (16) expression -> . NAME
    (17) expression -> . expression , expression

    (               shift and go to state 8
    NUMBER          shift and go to state 10
    NAME            shift and go to state 25

    expression                     shift and go to state 33

state 15

    (5) expression -> expression MINUS . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression REMAINDER expression
    (9) expression -> . expression EQUALS expression
    (10) expression -> . expression LEFT_ANGLE_BRA expression
    (11) expression -> . expression RIGHT_ANGLE_BRA expression
    (12) expression -> . expression COMP_OP expression
    (14) expression -> . ( expression )
    (15) expression -> . NUMBER
    (16) expression -> . NAME
    (17) expression -> . expression , expression

    (               shift and go to state 8
    NUMBER          shift and go to state 10
    NAME            shift and go to state 25

    expression                     shift and go to state 34

state 16

    (6) expression -> expression TIMES . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression REMAINDER expression
    (9) expression -> . expression EQUALS expression
    (10) expression -> . expression LEFT_ANGLE_BRA expression
    (11) expression -> . expression RIGHT_ANGLE_BRA expression
    (12) expression -> . expression COMP_OP expression
    (14) expression -> . ( expression )
    (15) expression -> . NUMBER
    (16) expression -> . NAME
    (17) expression -> . expression , expression

    (               shift and go to state 8
    NUMBER          shift and go to state 10
    NAME            shift and go to state 25

    expression                     shift and go to state 35

state 17

    (7) expression -> expression DIVIDE . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression REMAINDER expression
    (9) expression -> . expression EQUALS expression
    (10) expression -> . expression LEFT_ANGLE_BRA expression
    (11) expression -> . expression RIGHT_ANGLE_BRA expression
    (12) expression -> . expression COMP_OP expression
    (14) expression -> . ( expression )
    (15) expression -> . NUMBER
    (16) expression -> . NAME
    (17) expression -> . expression , expression

    (               shift and go to state 8
    NUMBER          shift and go to state 10
    NAME            shift and go to state 25

    expression                     shift and go to state 36

state 18

    (8) expression -> expression REMAINDER . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression REMAINDER expression
    (9) expression -> . expression EQUALS expression
    (10) expression -> . expression LEFT_ANGLE_BRA expression
    (11) expression -> . expression RIGHT_ANGLE_BRA expression
    (12) expression -> . expression COMP_OP expression
    (14) expression -> . ( expression )
    (15) expression -> . NUMBER
    (16) expression -> . NAME
    (17) expression -> . expression , expression

    (               shift and go to state 8
    NUMBER          shift and go to state 10
    NAME            shift and go to state 25

    expression                     shift and go to state 37

state 19

    (9) expression -> expression EQUALS . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression REMAINDER expression
    (9) expression -> . expression EQUALS expression
    (10) expression -> . expression LEFT_ANGLE_BRA expression
    (11) expression -> . expression RIGHT_ANGLE_BRA expression
    (12) expression -> . expression COMP_OP expression
    (14) expression -> . ( expression )
    (15) expression -> . NUMBER
    (16) expression -> . NAME
    (17) expression -> . expression , expression

    (               shift and go to state 8
    NUMBER          shift and go to state 10
    NAME            shift and go to state 25

    expression                     shift and go to state 38

state 20

    (10) expression -> expression LEFT_ANGLE_BRA . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression REMAINDER expression
    (9) expression -> . expression EQUALS expression
    (10) expression -> . expression LEFT_ANGLE_BRA expression
    (11) expression -> . expression RIGHT_ANGLE_BRA expression
    (12) expression -> . expression COMP_OP expression
    (14) expression -> . ( expression )
    (15) expression -> . NUMBER
    (16) expression -> . NAME
    (17) expression -> . expression , expression

    (               shift and go to state 8
    NUMBER          shift and go to state 10
    NAME            shift and go to state 25

    expression                     shift and go to state 39

state 21

    (11) expression -> expression RIGHT_ANGLE_BRA . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression REMAINDER expression
    (9) expression -> . expression EQUALS expression
    (10) expression -> . expression LEFT_ANGLE_BRA expression
    (11) expression -> . expression RIGHT_ANGLE_BRA expression
    (12) expression -> . expression COMP_OP expression
    (14) expression -> . ( expression )
    (15) expression -> . NUMBER
    (16) expression -> . NAME
    (17) expression -> . expression , expression

    (               shift and go to state 8
    NUMBER          shift and go to state 10
    NAME            shift and go to state 25

    expression                     shift and go to state 40

state 22

    (12) expression -> expression COMP_OP . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression REMAINDER expression
    (9) expression -> . expression EQUALS expression
    (10) expression -> . expression LEFT_ANGLE_BRA expression
    (11) expression -> . expression RIGHT_ANGLE_BRA expression
    (12) expression -> . expression COMP_OP expression
    (14) expression -> . ( expression )
    (15) expression -> . NUMBER
    (16) expression -> . NAME
    (17) expression -> . expression , expression

    (               shift and go to state 8
    NUMBER          shift and go to state 10
    NAME            shift and go to state 25

    expression                     shift and go to state 41

state 23

    (17) expression -> expression , . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression REMAINDER expression
    (9) expression -> . expression EQUALS expression
    (10) expression -> . expression LEFT_ANGLE_BRA expression
    (11) expression -> . expression RIGHT_ANGLE_BRA expression
    (12) expression -> . expression COMP_OP expression
    (14) expression -> . ( expression )
    (15) expression -> . NUMBER
    (16) expression -> . NAME
    (17) expression -> . expression , expression

    (               shift and go to state 8
    NUMBER          shift and go to state 10
    NAME            shift and go to state 25

    expression                     shift and go to state 42

state 24

    (21) statement -> VARIABLES expression . : type
    (22) statement -> VARIABLES expression .
    (4) expression -> expression . PLUS expression
    (5) expression -> expression . MINUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . DIVIDE expression
    (8) expression -> expression . REMAINDER expression
    (9) expression -> expression . EQUALS expression
    (10) expression -> expression . LEFT_ANGLE_BRA expression
    (11) expression -> expression . RIGHT_ANGLE_BRA expression
    (12) expression -> expression . COMP_OP expression
    (17) expression -> expression . , expression

    :               shift and go to state 43
    ;               reduce using rule 22 (statement -> VARIABLES expression .)
    $end            reduce using rule 22 (statement -> VARIABLES expression .)
    END             reduce using rule 22 (statement -> VARIABLES expression .)
    RIGHT_CURLY_BRA reduce using rule 22 (statement -> VARIABLES expression .)
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    REMAINDER       shift and go to state 18
    EQUALS          shift and go to state 19
    LEFT_ANGLE_BRA  shift and go to state 20
    RIGHT_ANGLE_BRA shift and go to state 21
    COMP_OP         shift and go to state 22
    ,               shift and go to state 23


state 25

    (16) expression -> NAME .

    :               reduce using rule 16 (expression -> NAME .)
    PLUS            reduce using rule 16 (expression -> NAME .)
    MINUS           reduce using rule 16 (expression -> NAME .)
    TIMES           reduce using rule 16 (expression -> NAME .)
    DIVIDE          reduce using rule 16 (expression -> NAME .)
    REMAINDER       reduce using rule 16 (expression -> NAME .)
    EQUALS          reduce using rule 16 (expression -> NAME .)
    LEFT_ANGLE_BRA  reduce using rule 16 (expression -> NAME .)
    RIGHT_ANGLE_BRA reduce using rule 16 (expression -> NAME .)
    COMP_OP         reduce using rule 16 (expression -> NAME .)
    ,               reduce using rule 16 (expression -> NAME .)
    ;               reduce using rule 16 (expression -> NAME .)
    $end            reduce using rule 16 (expression -> NAME .)
    END             reduce using rule 16 (expression -> NAME .)
    RIGHT_CURLY_BRA reduce using rule 16 (expression -> NAME .)
    )               reduce using rule 16 (expression -> NAME .)
    !               reduce using rule 16 (expression -> NAME .)


state 26

    (27) statement -> STATES NAME . : state STATE

    :               shift and go to state 44


state 27

    (28) statement -> TRANSITIONS NAME . : NAME LEFT_DIS ON DISPATCH RIGHT_DIS NAME LEFT_CURLY_BRA statement RIGHT_CURLY_BRA

    :               shift and go to state 45


state 28

    (29) statement -> IF ( . expression ) statement END IF
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression REMAINDER expression
    (9) expression -> . expression EQUALS expression
    (10) expression -> . expression LEFT_ANGLE_BRA expression
    (11) expression -> . expression RIGHT_ANGLE_BRA expression
    (12) expression -> . expression COMP_OP expression
    (14) expression -> . ( expression )
    (15) expression -> . NUMBER
    (16) expression -> . NAME
    (17) expression -> . expression , expression

    (               shift and go to state 8
    NUMBER          shift and go to state 10
    NAME            shift and go to state 25

    expression                     shift and go to state 46

state 29

    (14) expression -> ( expression . )
    (4) expression -> expression . PLUS expression
    (5) expression -> expression . MINUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . DIVIDE expression
    (8) expression -> expression . REMAINDER expression
    (9) expression -> expression . EQUALS expression
    (10) expression -> expression . LEFT_ANGLE_BRA expression
    (11) expression -> expression . RIGHT_ANGLE_BRA expression
    (12) expression -> expression . COMP_OP expression
    (17) expression -> expression . , expression

    )               shift and go to state 47
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    REMAINDER       shift and go to state 18
    EQUALS          shift and go to state 19
    LEFT_ANGLE_BRA  shift and go to state 20
    RIGHT_ANGLE_BRA shift and go to state 21
    COMP_OP         shift and go to state 22
    ,               shift and go to state 23


state 30

    (30) statement -> WHILE ( . expression ) statement END WHILE
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression REMAINDER expression
    (9) expression -> . expression EQUALS expression
    (10) expression -> . expression LEFT_ANGLE_BRA expression
    (11) expression -> . expression RIGHT_ANGLE_BRA expression
    (12) expression -> . expression COMP_OP expression
    (14) expression -> . ( expression )
    (15) expression -> . NUMBER
    (16) expression -> . NAME
    (17) expression -> . expression , expression

    (               shift and go to state 8
    NUMBER          shift and go to state 10
    NAME            shift and go to state 25

    expression                     shift and go to state 48

state 31
